# hlscnn-ila

./: .gitignore  CMakeLists.txt  README.md
app/: main.cc
include/hlscnn/: common_config.h  config_reg.h  conv_param.h  fc_param.h  hlscnn_top.h  internal_state.h  reduction_param.h  top_config.h  uninterpreted_func.h  utils.h
script/: conv2d_out_idx.py
src/: arch_state.cc  axi_master_child_instr.cc  config_instr.cc  config_state.cc  conv_child_instr.cc  conv_trigger_instr.cc  hlscnn_top.cc  init_condition.cc  internal_state.cc  spad_instr.cc  top_input.cc  top_io.cc  utils.cc  vir_mem_instr.cc
uninterpreted_func/: uninterpreted_func.cc  uninterpreted_func_place_holder.cc
